button change product details

--- a/payments.html
+++ b/payments.html
@@ -22,7 +22,7 @@
                         <div class="img-links">
                              <!--Customer basket-->
                              <!--<a href=""><img src="images/search.png" class="browse-icon"></a>-->
-                             <a href="index.html"><img src="assests/Navbar/home_4991416.png" class="home-icon"></a>
+                             <a href="index.php"><img src="assests/Navbar/home_4991416.png" class="home-icon"></a>
                              <a href=""><img src="assests/Navbar/about-us.png" class="about-us-icon"></a>
                              <a href=""><img src="assests/Navbar/notification_9383540.png" class="contact-us-icon"></a>
                              <a href=""><img src="assests/Navbar/avatar_9892372.png" class="account-icon"></a>
@@ -32,7 +32,7 @@
                         <div class="nav-links">
                         <ul>
                            <!--<li><a href="">Browse</a></li>-->
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.php">Home</a></li>
                             <li><a href="">About Us</a></li>
                             <li><a href="">Contact Us</a></li>
                             <li><a href="">Account</a></li>
