--- a/payments.html
+++ b/payments.html
@@ -64,7 +64,7 @@
 
                 <div class="inputBox">
                     <span>Full Name:</span>
-                    <input type="text" placeholder="Steve Smith">
+                    <input type="text" placeholder="Steve Smith" name="fullname">
                 </div>
                 <div class="inputBox">
                     <span>Company Email:</span>
