small directory issues fixed

--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/payments.css">
+    <link rel="stylesheet" href="../css/payments.css">
     <link rel="shortcut icon" type="icon" href="assests/Banners/logo.png">
 
 </head>
