--- a/empty-basket.html
+++ b/empty-basket.html
@@ -63,9 +63,9 @@
 
    <!----empty-basket-message--------->
 <br><br>
-<h1>YOUR BASKET IS CURRENTLY EMPTY</h1>
-      <form action= index.php> <button type='submit' class="checkout-button">Head back to Homepage</button></form>
-      <br><br>
+<h1>YOUR BASKET IS CURRENTLY EMPTY</h1><br><br>
+      <form action= index.php> <button type='submit' class="checkout-button">Return to Homepage</button></form>
+      <br><br><br><br>
     </div>
 </div>
 
