past orders page added

--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -112,7 +112,7 @@
                 <div class="flex">          
                     <div class="inputBox">
                         <span>Exp Date:</span>
-                        <input type="text" placeholder="MM/YY" name = "expMonth">
+                        <input type="text" placeholder="MM/YY" name="expDate">
                     </div>
                     <div class="inputBox">
                         <span>CVV :</span>
