small fix + new checkout files (to be done)

--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -81,7 +81,7 @@
                 <div class="flex">
                     <div class="inputBox">
                         <span>Area:</span>
-                        <input type="text" placeholder="Aston" name="area" id="area" maxlength="40">
+                        <input type="text" placeholder="Aston" name="area" id="area" maxlength="40" pattern="[A-Za-z]*">
                     </div>
                     <div class="inputBox">
                         <span>Post Code:</span>
