--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -67,25 +67,25 @@
 
                 <div class="inputBox">
                     <span>Company Email:</span>
-                    <input type="email" placeholder="example@example.com" name="email" id="email" maxlength="100">
+                    <input type="email" placeholder="example@example.com" name="email" id="email" maxlength="100" required>
                 </div>
                 <div class="inputBox">
                     <span>Company Address:</span>
-                    <input type="text" placeholder="Street etc." name="address" id="address" maxlength="100">
+                    <input type="text" id="address" name="address" placeholder="Street etc." maxlength="100" required>
                 </div>
                 <div class="inputBox">
                     <span>City:</span>
-                    <input type="text" placeholder="Birmingham" name="city" id="city" maxlength="30">
+                    <input type="text" placeholder="Birmingham" name="city" id="city" maxlength="30" required>
                 </div>
 
                 <div class="flex">
                     <div class="inputBox">
                         <span>Area:</span>
-                        <input type="text" placeholder="Aston" name="area" id="area" maxlength="40" pattern="[A-Za-z]*">
+                        <input type="text" placeholder="Aston" name="area" id="area" maxlength="40" pattern="[A-Za-z]*" required>
                     </div>
                     <div class="inputBox">
                         <span>Post Code:</span>
-                        <input type="text" placeholder="123 456" name="postcode" id="postcode" maxlength="7">
+                        <input type="text" placeholder="123 456" name="postcode" id="postcode" maxlength="7" required>
                     </div>
                 </div>
 
@@ -101,22 +101,25 @@
                 </div>
                 <div class="inputBox">
                     <span>Name On Card:</span>
-                    <input type="text" placeholder="Mr.Steve Smith" name="fullname" id="name" maxlength="30">
+                    <input type="text" placeholder="Mr.Steve Smith" name="fullname" id="name" maxlength="30" required>
                 </div>
+
                 <div class="inputBox">
+                <required>
                     <span> Credit Card Number:</span>
-                    <input type="text" placeholder="1111 2222 3333 4444" name="num" id="num" maxlength="19">
+                    <input type="text" placeholder="1111 2222 3333 4444" name="num" id="num" maxlength="19" required>
+                     </required>
                 </div>
 
 
                 <div class="flex">          
                     <div class="inputBox">
                         <span>Exp Date:</span>
-                        <input type="text" placeholder="MM/YY" name="expDate" id="expDate" maxlength="5">
+                        <input type="text" id="expDate" name="expDate" placeholder="MM/YY" maxlength="5" pattern="(0[1-9]|1[0-2])\/\d{2}" required>
                     </div>
                     <div class="inputBox">
                         <span>CVV :</span>
-                        <input type="text" placeholder="123" name="cvv" id="cvv" maxlength="3">
+                        <input type="text" id="cvv" name="cvv" placeholder="123" maxlength="3" pattern="[0-9]+" required>
                     </div>
                 </div>
 
@@ -126,7 +129,6 @@
         </div>
 
         <input type="submit" value="proceed to checkout" class="submit-btn">
-
     </form>
 </div>    
 
