--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -67,25 +67,27 @@
 
                 <div class="inputBox">
                     <span>Company Email:</span>
-                    <input type="email" placeholder="example@example.com" name="email" id="email" maxlength="100" required>
+                    <input type="email" name="Email" id="Email" placeholder="Email" pattern=".+@.+\.ac\.uk$" title="Email must end with .ac.uk" required> 
                 </div>
                 <div class="inputBox">
                     <span>Company Address:</span>
-                    <input type="text" id="address" name="address" placeholder="Street etc." maxlength="100" required>
+                    <input type="text" id="address" name="address" placeholder="Street etc." maxlength="100" required title="Please enter your street address (e.g., 123 Aston St)">
                 </div>
                 <div class="inputBox">
                     <span>City:</span>
-                    <input type="text" placeholder="Birmingham" name="city" id="city" maxlength="30" required>
+                    <input type="text" placeholder="Birmingham" name="city" id="city" maxlength="30" required pattern="[A-Za-z ]+" title="Please enter only letters (A-Z or a-z)">
+
                 </div>
 
                 <div class="flex">
                     <div class="inputBox">
                         <span>Area:</span>
-                        <input type="text" placeholder="Aston" name="area" id="area" maxlength="40" pattern="[A-Za-z]*" required>
+                        <input type="text" placeholder="Aston" name="area" id="area" maxlength="40" pattern="[A-Za-z]*" required title="Please enter only letters (A-Z or a-z)">
                     </div>
                     <div class="inputBox">
                         <span>Post Code:</span>
-                        <input type="text" placeholder="123 456" name="postcode" id="postcode" maxlength="7" required>
+                        <input type="text" placeholder="123 456" name="postcode" id="postcode" maxlength="7" required pattern="[A-Za-z0-9 ]+" title="Please enter only letters and numbers">
+
                     </div>
                 </div>
 
@@ -101,7 +103,7 @@
                 </div>
                 <div class="inputBox">
                     <span>Name On Card:</span>
-                    <input type="text" placeholder="Mr.Steve Smith" name="fullname" id="name" maxlength="30" required>
+                    <input type="text" placeholder="Mr. Steve Smith" name="full name" id="name" maxlength="30" pattern="[A-Za-z]*" required title="Please enter only letters (A-Z or a-z)">
                 </div>
 
                 <div class="inputBox">
@@ -115,11 +117,11 @@
                 <div class="flex">          
                     <div class="inputBox">
                         <span>Exp Date:</span>
-                        <input type="text" id="expDate" name="expDate" placeholder="MM/YY" maxlength="5" pattern="(0[1-9]|1[0-2])\/\d{2}" required>
+                        <input type="text" id="expDate" name="expDate" placeholder="MM/YY" maxlength="5" pattern="(0[1-9]|1[0-2])\/\d{2}" required title="Please enter the expiration date in the format MM/YY (e.g., 12/24)">
                     </div>
                     <div class="inputBox">
                         <span>CVV :</span>
-                        <input type="text" id="cvv" name="cvv" placeholder="123" maxlength="3" pattern="[0-9]+" required>
+                        <input type="text" id="cvv" name="cvv" placeholder="123" maxlength="3" pattern="[0-9]+" required title="Please enter a 3-digit number (e.g., 123)">
                     </div>
                 </div>
 
