--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -67,7 +67,7 @@
 
                 <div class="inputBox">
                     <span>Company Email:</span>
-                    <input type="email" name="Email" id="Email" placeholder="Email" pattern=".+@.+\.ac\.uk$" title="Email must end with .ac.uk" required> 
+                    <input type="email" name="email" id="email" placeholder="Email" pattern=".+@.+\.ac\.uk$" title="Email must end with .ac.uk" required> 
                 </div>
                 <div class="inputBox">
                     <span>Company Address:</span>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="inputBox">
                     <span>Name On Card:</span>
-                    <input type="text" placeholder="Mr. Steve Smith" name="full name" id="name" maxlength="30" pattern="[A-Za-z]+(\s[A-Za-z]+)?" required title="Please enter only letters (A-Z or a-z) with an optional space between names">
+                    <input type="text" placeholder="Mr. Steve Smith" name="fullname" id="name" maxlength="30" pattern="[A-Za-z]+(\s[A-Za-z]+)?" required title="Please enter only letters (A-Z or a-z) with an optional space between names">
                 </div>
 
                 <div class="inputBox">
