--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -121,7 +121,7 @@
 </div>    
 
 
-
+<script defer src="../js/payments-form.js"></script>
     <!--FOOTER-->
     <footer>
         <div class="footer">
